--- a/expenses-chart-component/assets/style.css
+++ b/expenses-chart-component/assets/style.css
@@ -40,7 +40,11 @@
     --medium-brown: hsl(28, 10%, 53%);
     --cream: hsl(27, 66%, 92%);
     --very-pale-orange: hsl(33, 100%, 98%);
+
+    font-size: 18px;
 }
+
+
 
 body{
     background-color: var(--cream);
@@ -52,29 +56,30 @@ body{
     justify-content: center;
     height: 100vh;
     width: 100%;
+    padding: 0 0.9rem;
 }
 .spend-card-wrap{
-    max-width: 21.3rem;
+    max-width: 30rem;
     width: 100%;
     color: var(--dark-brown);
 }
 
 .balance-card{
     background-color:var(--soft-red);
-    padding: 1.2rem 1.2rem;
-    border-radius: 0.7rem;
+    padding: 1.2rem 1.2rem 1.1rem; 
+    border-radius: 0.56rem;
     color: var(--very-pale-orange);
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
-    font-size: 0.933rem;
+    font-size: clamp(0.84rem, 2vw, 1rem); 
 }
 
 .balance-card .amount{
-    font-size: 1.5rem;
+    font-size: clamp(1.35rem, 6.5vw , 1.8rem); 
     font-weight: 700;
-    margin-top: 0.3rem;
+    margin-top: 0.26rem;
 }
 
 .balance-card .balance-text{
@@ -82,14 +87,14 @@ body{
 }
 .balance-card .company-logo{
     position: absolute;
-    height: 2.5rem;
-    top:1.8rem;
-    right: 1.6rem;
+    height: 2.22rem;
+    top: 1.8rem;
+    right: 1.3rem;
 }
 .spending-card{
     background-color: var(--very-pale-orange);
-    margin-top: 1rem;
-    padding: 1.8rem 1.2rem 1.2rem;
+    margin-top: 0.9rem;
+    padding: 1.4rem 1.1rem 1.2rem;
     border-radius: 0.7rem;
 
 }
@@ -98,9 +103,15 @@ body{
     /* padding: 1.8rem 0 0; */
 }
 
+.chart-wrap h1{
+    font-size: 1.34rem;
+    padding: 0;
+    margin: 0;
+}
+
 .chart-figure-scroll-box{
-    height: 14rem;
-    margin-top: 0.5rem;
+    height: 12.8rem;
+    margin-top: 0.4rem;
     /* overflow-x: auto; */
     /* background-color: aqua; */
 }
@@ -113,7 +124,7 @@ body{
 }
 
 .chart-bar-col{
-    width: 2rem;
+    width: 10.7%;
     position: relative;
     /* background-color: var(--medium-brown); */
     display: flex;
@@ -122,7 +133,7 @@ body{
 }
 
 .chart-bar-col .label{
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     text-align: center;
     /* position: absolute; */
     /* bottom: 0.2rem; */
@@ -183,6 +194,9 @@ body{
 .chart-bar-col .bar:hover .bar-text{
     opacity: 1;
 }
+
+
+
 .total-footer{
     display: flex;
     justify-content: space-between;
@@ -191,14 +205,14 @@ body{
     border-top: 2px solid var(--medium-brown);
     /* padding: 0 0 1.6rem ; */
     margin-top: 1rem;
-    font-size: 0.95rem;
+    font-size: 0.85rem;
 }
 
 .total-wrap{
-    margin-top: 1.5rem;
+    margin-top: 1.3rem;
 }
 .total-wrap .amount{
-    font-size: 1.9rem;
+    font-size: 1.66rem;
     font-weight: 700;
     margin: 0.3rem 0;
 }
