html fixes after submission

--- a/interactive-card-details-form/src/main.css
+++ b/interactive-card-details-form/src/main.css
@@ -4,6 +4,7 @@
 
 @layer components {
     .input-gradient-wrapper{
+        display:block;
         border:-2px;
         border-radius:5px;
     }
