font weights in textboxes

--- a/interactive-card-details-form/src/main.css
+++ b/interactive-card-details-form/src/main.css
@@ -26,6 +26,7 @@
     }
     .active-input::placeholder{
         color:hsl(270, 3%, 87%);
+        font-weight:bold;
     }
     .active-input:invalid{
         border:2px solid hsl(0, 100%, 66%);
