do not import unused vue components

--- a/notifications-panel/src/style.sass
+++ b/notifications-panel/src/style.sass
@@ -3,11 +3,13 @@
     src: url('../assets/fonts/PlusJakartaSans-VariableFont_wght.ttf')
     font-weight: Variable
 // resets
+:root
+    font-size:16px
+        
 *
     border:0
     padding: 0
     margin: 0
-    font-size: 16px
 
 %header-reset
     margin-block: 0
@@ -27,3 +29,10 @@ h1
 h5 
     @extend %header-reset
     color: red
+
+
+.attribution
+    font-size: 11px
+    text-align: center
+    a 
+        color: hsl(228, 45%, 44%)
