add count dependant on unread notifs add preview images separate styling for sender name, text and subject

--- a/notifications-panel/src/style.sass
+++ b/notifications-panel/src/style.sass
@@ -21,11 +21,16 @@ $grayish-blue: hsl(219, 14%, 63%)
 $dark-grayish-blue: hsl(219, 12%, 42%)
 $very-dark-blue: hsl(224, 21%, 14%)
 
+$break-point: 554px
+
 body
     font-family: 'Plus Jakarta Sans', sans-serif
     font-weight: 500
     background-color: $very-light-grayish-blue
-    padding-block: 2rem
+    // max-height: 100vh
+@media screen and (min-width:$break-point)
+    body
+        padding-block: 2rem
 
 h1
     @extend %header-reset
@@ -38,13 +43,17 @@ a
     text-decoration: none
 .main-wrapper
     box-shadow: 0 0 2rem $light-grayish-blue-1
-    border-radius:0.8em
+    border-radius:0
     background-color: $white
     max-width: 50ch
     margin-inline: auto
-    padding-inline: 1.5rem
     overflow-block: auto
+    padding-inline: 1.5rem
 
+@media screen and (min-width:$break-point)
+    .main-wrapper
+        border-radius:0.8em
+    
 .title
     padding-block: 2rem
     display: flex
@@ -70,32 +79,68 @@ a
 .notification
     display: flex
     font-size: 0.8rem
+    align-items: center
+    cursor: pointer
+    .sender
+        font-weight: 800
+        color: $very-dark-blue
+    .subject
+        font-weight: 800
+        color: $dark-grayish-blue
+    .subject.group
+        color: $blue
     .main
         // display: flex
+        width: 100%
         padding-block: 1rem 
         justify-content: stretch
         align-items: center
         min-height: 3.2rem
-    img
+    .time
+        color: $grayish-blue
+    img.profile
+        overflow: hidden
+        font-size: 0.5rem
+        display: flex
+        justify-items: center
+        align-items: center
+        text-align: center
         width: 2.2rem
         height: 2.2rem
         border-radius: 1.1rem
-        background-color: $dark-grayish-blue
         margin: 1rem
-    .preview
+    img.image-preview
+        // align-self: flex-end
+        height:2.2rem
+        width:2.2rem
+        margin-inline-end: 1rem
+    .text-preview
         margin-block-start: 0.5rem
         margin-inline-end: 1rem
+        background-color: $white
         color: $grayish-blue
         border-radius: 0.3rem
         border: 1px solid $light-grayish-blue-1
         padding:0.8rem
-.notification.unread
-    background-color: $very-light-grayish-blue
-    // padding-block: 0.8rem
-    border-radius: 0.4rem
-    box-shadow: 0 0.05rem 0 $light-grayish-blue-1
+
+    &.unread
+        background-color: $very-light-grayish-blue
+        // padding-block: 0.8rem
+        border-radius: 0.4rem
+        box-shadow: 0 0.05rem 0 $light-grayish-blue-1
+    &.unread .notification-text::after
+        content: ''
+        width: 0.5rem
+        height: 0.5rem
+        margin-inline-start: 0.25rem
+        display: inline-block
+        background-color: $red
+        border-radius: 0.5rem
+
+            
 
 .attribution
+    padding-block: 1rem
     font-size: 11px
     text-align: center
     a 
