--- a/notifications-panel/src/style.sass
+++ b/notifications-panel/src/style.sass
@@ -5,7 +5,8 @@
     src: url('../assets/fonts/PlusJakartaSans-VariableFont_wght.ttf')
     font-weight: Variable
 :root
-    font-size:16px
+    font-size:12.8px
+    line-height: 1.26
 // colors
 // Primary
 $red: hsl(1, 90%, 64%)
@@ -30,58 +31,59 @@ body
     // max-height: 100vh
 @media screen and (min-width:$break-point)
     body
-        padding-block: 2rem
+        padding-block: 3.7rem
 
 h1
     @extend %header-reset
     font-weight: 800
     color: $very-dark-blue
-    font-size: 1.2rem
+    font-size: 1.5rem
     line-height:100%
 
 a
     text-decoration: none
 .main-wrapper
-    box-shadow: 0 0 2rem $light-grayish-blue-1
+    box-shadow: 0 0 2.5rem $light-grayish-blue-1
     border-radius:0
     background-color: $white
-    max-width: 50ch
+    max-width:63ch
     margin-inline: auto
     overflow-block: auto
-    padding-inline: 1.5rem
+    padding-inline: 1.875rem
 
 @media screen and (min-width:$break-point)
     .main-wrapper
         border-radius:0.8em
     
 .title
-    padding-block: 2rem
+    padding-block: 2.5rem
+    padding-block-end: 2.3rem
     display: flex
     justify-content: space-between
 
 .count-badge
     background-color: $blue
-    border-radius: 0.3rem
+    border-radius: 0.375rem
     color: $white
     vertical-align: bottom
     display: inline-block
-    font-size: 0.8rem
-    margin-inline: 0.2rem
-    padding-inline: 0.6rem
+    font-size: 1rem
+    margin-inline: 0.7rem
+    padding-inline: 0.7rem
     // padding-block-start: 0rem
-    line-height: 0.8rem
-    padding-block: 0.2rem
+    line-height: 1rem
+    padding-block: 0.25rem
 .title-action-link
-    font-size: 0.8rem
+    font-size: 1rem
     color: $dark-grayish-blue
 .notifications > * + *
-    margin-block-start: 0.5rem 
+    margin-block-start: 0.625rem 
 .notification
     display: flex
-    font-size: 0.8rem
+    font-size: 1rem
     // align-items: center
     cursor: pointer
-    padding-block: 0.85rem
+    padding-block: 1.0625rem
     .sender
         font-weight: 800
         color: $very-dark-blue
@@ -93,62 +95,64 @@ a
     .main
         // display: flex
         width: 100%
-        // padding-block: 1rem 
+        // padding-block: 1.25rem 
         justify-content: stretch
         align-items: center
-        // min-height: 3.2rem
+        // min-height: 4rem
     .time
         color: $grayish-blue
         display: block
-        margin-block-start: 0.15rem
+        margin-block-start: 0.1875rem
     img.profile
         overflow: hidden
-        font-size: 0.5rem
+        font-size: 0.625rem
         display: flex
         justify-items: center
         align-items: center
         text-align: center
-        width: 2.2rem
-        height: 2.2rem
-        border-radius: 1.1rem
-        margin-inline: 1.25rem
+        width: 2.75rem
+        height: 2.75rem
+        border-radius: 1.375rem
+        margin-inline: 1.3rem
         margin-block: 0
     img.image-preview
         // align-self: flex-end
-        height:2.2rem
-        width:2.2rem
-        margin-inline-end: 1rem
+        height:2.75rem
+        width:2.75rem
+        margin-inline-end: 1.25rem
     .text-preview
-        margin-block-start: 0.5rem
-        margin-inline-end: 1rem
+        margin-block-start: 0.8rem
+        margin-inline-end: 1.25rem
         background-color: $white
         color: $dark-grayish-blue
-        border-radius: 0.3rem
+        border-radius: 0.375rem
         border: 1px solid $light-grayish-blue-2
-        padding:0.8rem
-
+        padding:1.1rem
+        
     &.unread
         background-color: $very-light-grayish-blue
-        // padding-block: 0.8rem
-        border-radius: 0.4rem
-        box-shadow: 0 0.05rem 0 $light-grayish-blue-1
+        // padding-block: 1rem
+        border-radius: 0.5rem
+        box-shadow: 0 0.0625rem 0 $light-grayish-blue-1
     &.unread .notification-text::after
         content: ''
-        width: 0.5rem
-        height: 0.5rem
-        margin-inline-start: 0.25rem
+        width: 0.625rem
+        height: 0.625rem
+        margin-inline-start: 0.3125rem
         display: inline-block
         background-color: $red
-        border-radius: 0.5rem
+        border-radius: 0.625rem
 
-            
+@media screen and (min-width:$break-point)
+    :root
+        font-size: 16px            
 
 .attribution
-    padding-block: 1rem
+    position: absolute
+    bottom: 0
+    padding: 1.25rem
+    width: 100%
     font-size: 11px
     text-align: center
     a 
         color: hsl(228, 45%, 44%)
-@media screen and (min-width:$break-point)
-    :root
-        // font-size: 20px
