--- a/notifications-panel/src/style.sass
+++ b/notifications-panel/src/style.sass
@@ -76,6 +76,8 @@ a
 .title-action-link
     font-size: 1rem
     color: $dark-grayish-blue
+    &:hover
+        color: $blue
 .notifications > * + *
     margin-block-start: 0.625rem 
 .notification
@@ -87,11 +89,13 @@ a
     .sender
         font-weight: 800
         color: $very-dark-blue
+        &:hover
+            color: $blue
     .subject
         font-weight: 800
         color: $dark-grayish-blue
-    .subject.group
-        color: $blue
+        &:hover
+            color: $blue
     .main
         // display: flex
         width: 100%
@@ -128,6 +132,8 @@ a
         border-radius: 0.375rem
         border: 1px solid $light-grayish-blue-2
         padding:1.1rem
+        &:hover
+            background-color: $light-grayish-blue-1
         
     &.unread
         background-color: $very-light-grayish-blue
