fixing credits text position

--- a/notifications-panel/src/style.sass
+++ b/notifications-panel/src/style.sass
@@ -28,6 +28,7 @@ body
     font-family: 'Plus Jakarta Sans', sans-serif
     font-weight: 500
     background-color: $very-light-grayish-blue
+    position: relative
     // max-height: 100vh
 @media screen and (min-width:$break-point)
     body
