active state for image-preview

--- a/notifications-panel/src/style.sass
+++ b/notifications-panel/src/style.sass
@@ -125,6 +125,9 @@ a
         height:2.75rem
         width:2.75rem
         margin-inline-end: 1.25rem
+        border-radius: 0.4rem
+        &:hover
+            box-shadow: 0 0 0 0.2rem $light-grayish-blue-1
     .text-preview
         margin-block-start: 0.8rem
         margin-inline-end: 1.25rem
