fix colour of the notification text

--- a/notifications-panel/src/style.sass
+++ b/notifications-panel/src/style.sass
@@ -103,6 +103,7 @@ a
         // padding-block: 1.25rem 
         justify-content: stretch
         align-items: center
+        color:  $dark-grayish-blue
         // min-height: 4rem
     .time
         color: $grayish-blue
